# worker-prep_stt

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  config.py  main.py  pyproject.toml  test.sh
lib/: util.py
lib/audio/: def_lang.py  denoise.py  speaker.py  vad.py  whisper.py
lib/http/: http_util.py  pre.py  stt.py
lib/io/: ffmpeg.py  s3.py
lib/service/: pre_service.py  stt_service.py
