[project]
name = "prep_stt"
version = "0.1.0"
description = "Whisper large-v3 STT over HTTP — the GPU stage of the video STT pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "numpy>=2.0",
    "soundfile>=0.13",
    "torch>=2.8",
    "torchaudio>=2.8",
    "packaging>=23,<25",
    "faster-whisper>=1.2.1",
    "pyannote-audio>=4.0.4",
    "deepfilternet-py312>=0.5.7",
    "deepfilterlib>=0.5.6",
    "torchcodec==0.11.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchcodec = { index = "pytorch-cu128" }   # cu128 빌드 강제 (PyPI 0.14=cuda13 와 충돌 방지)
